layout work process

--- a/src/index.html
+++ b/src/index.html
@@ -171,6 +171,48 @@
             </div>
         </section>
 
+        <section class="additional_info">
+            <div class="container">
+                <header class="additional_info-header">
+                    <h2>Saia Masculina: Origem, Dicas e Inspirações</h2>
+                    <h3>ESCRITO POR ANA PAULA MOTTA</h3>
+                </header>
+                <section class="additional_info-screen">
+                    <h3 class="first_additional_info-header"><span>Saia Masculina</span> é Mais Antiga do Que Parece</h3>
+                    <div class="additional_info-container">
+                        <img class="first_screen-img" src="./assets/img/additional_info_img/first_screen_img.png" alt="">
+                        <div class="first_text_block">
+                            <p> Engano achar que não precisa ir muito longe na história para entender de onde surgiu a tendência da saia masculina. Nas histórias bíblicas do antigo testamento – centenas de anos antes de Cristo - há descrições que sugerem que a indumentária masculina seria composta por saia que, mais tarde, foi transformada em túnica, assim como a vestimenta dos Egípcios e Árabes.</p>
+                            <p>Na Grécia Antiga os gregos também são retratados em documentos históricos usando saia masculina, mas eles a consideravam uma peça agênero. Por outro lado, no Império Romano os homens vestiam a toga, onde os tecidos, cores e comprimentos determinavam a classe social a qual pertenciam, por exemplo, os escravos e plebeus utilizavam apenas uma túnica de camada única, enquanto os nobres vestiam várias camadas e o comprimento das saias era até o joelho.</p>
+                            <p>Há indicativos que grupos étnicos africanos como os Masai e Samburu também trouxeram a cultura da saia masculina e influenciam no estilo contemporâneo, bem como os escoceses com a kilt e os samurais, com a hakama.</p>
+                        </div>
+                    </div>
+                </section>
+                <section class="additional_info-screen">
+                    <h3>A Saia Masculina Pode Ser Uma Peça Polêmica Porque Causa Estranhamento</h3>
+                    <div class="additional_info-container">
+                        <div class="second_text_block">
+                            <div class="text_block-images">
+                                <img src="./assets/img/additional_info_img/text_block_img1.png" alt="">
+                                <img src="./assets/img/additional_info_img/text_block_img2.png" alt="">
+                            </div>
+                            <div class="additional_info-text">
+                                <p> Precisamos falar sobre isso. Já está explicado que a saia masculina é mais antiga do que podemos imaginar. Em várias culturas, ela é um modelo comum até os dias de hoje.</p>
+                                <p>Agora você consegue entender o porquê da sociedade brasileira não a compreender? E nem precisa entrar no assunto de gênero e sexualidade, só é necessário fazer essa reflexão.</p>
+                                <p>                                       Ainda falta muito para que a saia masculina seja verdadeiramente aceita com naturalidade no Brasil. No exterior, podemos ver homens de saia sem medo de ousar, até mesmo entre os famosos, como Brandon Wilson, Jered Leto, Jaden Smith, Keiynan Lonsdale, dentre tantos outros.
+                                Por isso, o nosso intuito com esse artigo é quebrar o tabu que vem do machismo estrutural, que insinua que a saia não é “coisa de macho”, pois muitos homens descolados, de todos os estilos, idades e orientações sexuais, já aderiram ao uso dela. Pode até causar estranhamento ao ver um homem de saia da primeira vez, mas basta lembrar que várias roupas também enfrentaram preconceito antes de virar tendência.</p>
+                            </div>
+                        </div>
+                        <img class="second_screen-img" src="./assets/img/additional_info_img/second_screen_img.png" alt="">
+                    </div>
+                </section>
+                <section class="additional_info-screen">
+                    <h3></h3>
+                    <div class="additional_info-container"></div>
+                </section>
+            </div>
+        </section>
+
     </main>
 
     <footer class="footer">
