created html and css website structure

--- a/src/index.html
+++ b/src/index.html
@@ -189,7 +189,7 @@
                     </div>
                 </section>
                 <section class="additional_info-screen">
-                    <h3>A Saia Masculina Pode Ser Uma Peça Polêmica Porque Causa Estranhamento</h3>
+                    <h3 class="second_additional_info-header">A Saia Masculina Pode Ser Uma Peça Polêmica <span>Porque Causa Estranhamento</span></h3>
                     <div class="additional_info-container">
                         <div class="second_text_block">
                             <div class="text_block-images">
@@ -206,9 +206,45 @@
                         <img class="second_screen-img" src="./assets/img/additional_info_img/second_screen_img.png" alt="">
                     </div>
                 </section>
-                <section class="additional_info-screen">
-                    <h3></h3>
-                    <div class="additional_info-container"></div>
+                <section class="additional_info-screen additional_info-screen-third">
+                    <h3>A Saia Masculina <span>e Suas Inspirações</span></h3>
+                    <div class="additional_info-container">
+                        <div class="third_screen_column-one">
+                            <img src="./assets/img/additional_info_img/third_screen-img1.png" alt="">
+                            <img src="./assets/img/additional_info_img/third_screen-img2.png" alt="">
+                        </div>
+                        <div class="third_screen_column-two">
+                            <img src="./assets/img/additional_info_img/third_screen-img3.png" alt="">
+                        </div>
+                        <div class="third_screen_column-three">
+                            <img src="./assets/img/additional_info_img/third_screen-img4.png" alt="">
+                            <p>A versatilidade da moda traz a saia masculina para a realidade da ousadia, da força e da autenticidade. Para vestir, é bom saber quais são os estilos e como combinar. Vamos lá?</p>
+                        </div>
+                    </div>
+                    <div class="third_screen-text">
+                        <p> Primeiramente, é importante lembrar que a saia escocesa, a kilt, é a mais popular e clássica. Alguns especialistas nem a consideram uma saia masculina, por partir do pressuposto que kilt é como um manto preso à roupa para se proteger do frio. Parte dos escoceses também afirmam que não é uma saia. Mas independente disso, não deixamos de visualizá-la como uma peça que há séculos representa um traço cultural fortíssimo desse povo europeu</p>
+                        <p>Por outro lado, o street style – ou estilo urbano – está caindo no gosto dos jovens contemporâneos. A saia masculina desse outfit vem com cores neutras e tecidos leves, podendo ser longas ou na altura dos joelhos, nesta opção, ela pode ser usada sobreposta com calças também de cores neutras, sendo uma ótima alternativa para dias mais frios. Já a saia longa, pode ser utilizada com casaco ou camisa longline, tênis ou sapato social e, independente da ocasião, seja uma festa mais formal ou um encontro informal, basta ter atitude que o restante das peças combinará por si só.</p>
+                        <p>Agora você sabe que a saia masculina pode se tornar uma peça chave no guarda roupa de qualquer homem. Deu vontade de usar? Analise bem, se inspire nos conceitos , teste o look e, quando estiver preparado para ousar, se jogue!</p>
+                    </div>
+                </section>
+
+                <section class="wear_types">
+                    <div class="wear_type">
+                        <img src="./assets/img/wear_types/wear_type1.png" alt="">
+                        <p>Bandanas e Durags</p>
+                    </div>
+                    <div class="wear_type">
+                        <img src="./assets/img/wear_types/wear_type2.png" alt="">
+                        <p>Lançamentos</p>
+                    </div>
+                    <div class="wear_type">
+                        <img src="./assets/img/wear_types/wear_type3.png" alt="">
+                        <p>kace x Pitayaq</p>
+                    </div>
+                    <div class="wear_type">
+                        <img src="./assets/img/wear_types/wear_type4.png" alt="">
+                        <p>Conteúdo sobre StreetWear</p>
+                    </div>
                 </section>
             </div>
         </section>
@@ -216,7 +252,45 @@
     </main>
 
     <footer class="footer">
-        <div class="container"></div>
+        <div class="footer_container container">
+            <section class="footer_info">
+                <h4>Info</h4>
+                <p>Contato</p>
+                <p>Revenda/Atacado</p>
+                <p>Conheça a Loja Física</p>
+                <p>Famosos que usam KACE</p>
+                <p>Segurança</p>
+                <p>Fretes e Entregas</p>
+                <p>Trocas e Devoluções</p>
+                <p>Term os de Serviço </p>
+            </section>
+            <section class="footer_contacts">
+                <h4>Loja Física:</h4>
+                <div class="addres">
+                    <p>Rua Paraíba, 1073 - Savassi (BH - MG)</p>
+                    <p>CEP: 30130-145</p>
+                    <p>Segunda à Sexta: 10:00 às 19:00</p>
+                    <p>Sábados: 10:00 às 14:00</p>
+                </div>
+                <div class="phones">
+                    <p>Tel Fixo: (31) 3024-8193</p>
+                    <p>Whatsapp: (31) 99355-05913</p>
+                </div>
+            </section>
+            <section class=" footer_brand_info">
+                <h4>Kace Wear</h4>
+                <p>A KACE, acrônimo de Keep Advancing and Conquer Everything (Continue Avançando e Conquiste Tudo), é uma marca de roupas streetwear high-end e plataforma de cultura e moda urbana brasileira, com sede em Belo Horizonte (Minas Gerais). A marca incorpora em seus produtos a consciência de que somos do tamanho dos nossos sonhos e disponibiliza itens de qualidade premium, combinando: conceito, conforto e exclusividade.</p>
+            </section>
+            <section class="footer_contact_links">
+                <h4>Cadastrar</h4>
+                <p> Novos drops, descontos, promoções, conteúdos especiais sobre streetwear, moda, estilo e cultura urbana. Cadastre-se e fique por dentro de tudo que rolar!</p>
+                <p class="mail">kacewear@gmail.com</p>
+                <div class="footer_contact-icons">
+                    <img src="./assets/icons/footer_icons/fb.png" alt="">
+                    <img src="./assets/icons/footer_icons/wsp.png" alt="">
+                </div>
+            </section>
+        </div>
     </footer>
 
     <script src="./js/script.js"></script>
